hook useUnidades creada

--- a/FRONT-SIMEC/SIMEC/src/components/UnitCard/UnitCard_style.scss
+++ b/FRONT-SIMEC/SIMEC/src/components/UnitCard/UnitCard_style.scss
@@ -62,7 +62,8 @@
     z-index: 350;
 
     .card-title {
-      font-size: 1.8rem;
+      font-size: 2rem;
+      font-weight: bold;
       margin: 0 0 0.5rem 0;
     }
   }
